tests/ui/traits/lifetime-incomplete-prefer-sized-builtin-over-wc.next.stderr
error: lifetime may not live long enough
  --> $DIR/lifetime-incomplete-prefer-sized-builtin-over-wc.rs:20:5
   |
LL | fn foo<'a, T: ?Sized>()
   |        -- lifetime `'a` defined here
...
LL |     is_sized::<(MyType<'a, T>,)>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ requires that `'a` must outlive `'static`

error: aborting due to 1 previous error

